--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.linkscurtos.com/KqIqlzUSic" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/otLnzrmT3c" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,7 +335,7 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.linkscurtos.com/gAzGRdStJU" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/jTvo4c0v8u" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
@@ -377,7 +377,7 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://www.linkscurtos.com/wf5dyXAucO" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/zuI3wD1esG" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
