--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.linkscurtos.com/otLnzrmT3c" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/ti35akoflwmum32/Delta-2.686.866.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,7 +335,7 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.linkscurtos.com/jTvo4c0v8u" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/v15ade8cr6n0uy8/krnl_release_2.685.797_2025.8.18_44.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
@@ -347,37 +347,37 @@
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.linkscurtos.com/bjkTZYHO2h" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/k3vddklbtobgor3/Codex+v2.685.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.linkscurtos.com/VlnIpzhTa7" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/dbhwnovkhxbl0ui/Roblox_Arceus_X_NEO_1.8.0.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://www.mediafire.com/file/0pjjqca7vzju1qp/Vega_X_2.679.762.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/zfzwzo379dlb4kt/Vega.X.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
           <h3>Evon Executor</h3>
           <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
-          <a href="https://www.linkscurtos.com/pEOgIWMtDB" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/2vl6af8kgnptewc/Evon.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
           <h3>Frostware Executor</h3>
           <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
-          <a href="https://www.linkscurtos.com/KuwgW0fN30" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/l3re2sxk8rxa6un/Frostware+Gen-X+V3.7.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://www.linkscurtos.com/zuI3wD1esG" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/fyttebwew82ogxx/Trigon_2.686.866.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
