--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.mediafire.com/file/m4udc92dj51gu3w/Delta-2.688.862.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/cqafq9qlz9hqtuq/Delta-2.689.880.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,7 +335,7 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/v15ade8cr6n0uy8/krnl_release_2.685.797_2025.8.18_44.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/akcsv7b0sopid0x/krnl_release_2.689.880_2025.9.14_49.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
@@ -347,7 +347,7 @@
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.mediafire.com/file/c9svoky5l2sh7fg/Codex+v2.688.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/iqdowzljfuagptd/Codex_v2.689.880.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
@@ -359,7 +359,7 @@
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://www.mediafire.com/file/p2c4al685ola3us/Vega.X.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/qf5q5k5bax82r2i/Vega.X.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
@@ -377,13 +377,13 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://www.mediafire.com/file/tqod645iwzrmyf4/Trigon_2.687.816.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/uf9usk0gpyxcrvn/Trigon_2.689.880_2.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://www.linkscurtos.com/URIAc1vKDD" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/5r7joa9h6lq3lzj/Cryptic_2.689.880_APK.apk/file" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -502,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-  </html>
+</html>
