--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.mediafire.com/file/swea01h59sa3hf8/Delta-2.690.721.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2074" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,7 +335,7 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/w2tmhv2y49oxt40/krnl_release_2.691.868_2025.9.21_50.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2062" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
@@ -347,7 +347,7 @@
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.mediafire.com/file/iqdowzljfuagptd/Codex_v2.689.880.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2042" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
@@ -359,13 +359,13 @@
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://www.mediafire.com/file/qf5q5k5bax82r2i/Vega.X.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2054" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
           <h3>Evon Executor</h3>
           <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
-          <a href="https://www.mediafire.com/file/f8crq3n12s1rb4c/Evon.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2066" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
@@ -377,13 +377,13 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://www.mediafire.com/file/uf9usk0gpyxcrvn/Trigon_2.689.880_2.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2046" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://www.mediafire.com/file/5r7joa9h6lq3lzj/Cryptic_2.689.880_APK.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2050" class="download-button">Download</a>
         </div>
       </div>
     </section>
