--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
       box-shadow: 0 0 15px rgba(255, 0, 255, 0.8);
     }
 
+    .tutorial-button {
+      background: linear-gradient(45deg, #ff9900, #ffcc00);
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 10px;
+      border-radius: 5px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .tutorial-button:hover {
+      background: linear-gradient(45deg, #ffcc00, #ff9900);
+      transform: scale(1.05);
+      box-shadow: 0 0 10px rgba(255, 153, 0, 0.8);
+    }
+
     header {
       background: linear-gradient(180deg, #1c1c1c, transparent);
       padding: 20px;
@@ -285,7 +304,7 @@
       .grid {
         grid-template-columns: 1fr;
       }
-      .navbar button {
+      .navbar button, .tutorial-button {
         padding: 8px 15px;
         font-size: 0.9rem;
         margin: 5px;
@@ -309,7 +328,7 @@
 
   <nav class="navbar">
     <button class="tab-button active" onclick="showSection('executors')">Executores</button>
-    <button class="tab-button" onclick="showSection('executors-lite')">Executores Lite</button>
+    <button class="tutorial-button" onclick="window.open('https://youtu.be/Sb-R8FKdEkw?si=Ioy7F-KmbQljQZRI', '_blank')">Tutorial Encurtador</button>
     <button class="tab-button" onclick="showSection('scripts')">Scripts</button>
   </nav>
 
@@ -323,13 +342,13 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://topjogosvip.online/?p=2074" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2914" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
           <h3>Ronix Executor</h3>
           <p>Executor atualizado com suporte robusto para scripts e desempenho otimizado.</p>
-          <a href="https://www.mediafire.com/file/akgxpcaz8q33s6d/Ronix_682.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2882" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
@@ -347,19 +366,19 @@
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://topjogosvip.online/?p=2042" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2906" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.mediafire.com/file/p05mfj8v7bj1yd5/Roblox_Arceus_X_NEO_1.8.1.apk/file" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2898" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://topjogosvip.online/?p=2054" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2902" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
@@ -377,51 +396,13 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://topjogosvip.online/?p=2046" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2894" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://topjogosvip.online/?p=2050" class="download-button">Download</a>
-        </div>
-      </div>
-    </section>
-
-    <section id="executors-lite" class="section">
-      <header>
-        <h1>EXECUTORES LITE</h1>
-      </header>
-      <div class="grid">
-        <div class="card">
-          <img src="https://i.imgur.com/HzKgECg.png" alt="Delta Lite Executor" />
-          <h3>Delta Lite</h3>
-          <p>Versão leve do Delta Executor, ideal para dispositivos com menos recursos.</p>
-          <a href="https://ksl-technologies.net/?p=15347" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/jfujlYl.png" alt="Fluxus Lite Executor" />
-          <h3>Fluxus Lite</h3>
-          <p>Executor leve para Android, otimizado para desempenho em dispositivos básicos.</p>
-          <a href="https://ksl-technologies.net/?p=15348" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/DPL0Ztw.png" alt="Evon Lite Executor" />
-          <h3>Evon Lite</h3>
-          <p>Versão leve do Evon Executor, otimizada para desempenho em dispositivos com recursos limitados.</p>
-          <a href="https://www.mediafire.com/folder/curxkmp7949je/EVON+LITE" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/ESRQ81S.png" alt="Krnl Lite Executor" />
-          <h3>Krnl Lite</h3>
-          <p>Versão simplificada do Krnl, ideal para dispositivos com menor capacidade de processamento.</p>
-          <a href="https://ksl-technologies.net/?p=15349" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/b6wRgCZ.png" alt="Frostware Lite Executor" />
-          <h3>Frostware Lite</h3>
-          <p>Versão leve do Frostware, projetada para oferecer estabilidade em dispositivos básicos.</p>
-          <a href="https://ksl-technologies.net/?p=15350" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=2890" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -484,21 +465,16 @@
 
   <script>
     function showSection(sectionId) {
-      // Remove a classe 'active' de todas as seções
       document.querySelectorAll('.section').forEach(section => {
         section.classList.remove('active');
       });
-      // Remove a classe 'active' de todos os botões
       document.querySelectorAll('.tab-button').forEach(button => {
         button.classList.remove('active');
       });
-      // Adiciona a classe 'active' à seção correspondente
       document.getElementById(sectionId).classList.add('active');
-      // Adiciona a classe 'active' ao botão clicado
       event.target.classList.add('active');
     }
 
-    // Show executors section by default
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
