--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JINX - Executores e Scripts</title>
+  <title>JINX - Executores, Scripts e CapCut</title>
   <style>
     * {
       box-sizing: border-box;
@@ -159,6 +159,7 @@
     .card:nth-child(9) { --i: 9; }
     .card:nth-child(10) { --i: 10; }
     .card:nth-child(11) { --i: 11; }
+    .card:nth-child(12) { --i: 12; }
 
     .card:hover {
       transform: translateY(-10px);
@@ -330,6 +331,7 @@
     <button class="tab-button active" onclick="showSection('executors')">Executores</button>
     <button class="tutorial-button" onclick="window.open('https://youtu.be/Sb-R8FKdEkw?si=Ioy7F-KmbQljQZRI', '_blank')">Tutorial Encurtador</button>
     <button class="tab-button" onclick="showSection('scripts')">Scripts</button>
+    <button class="tab-button" onclick="showSection('capcut')">CapCut</button>
   </nav>
 
   <main>
@@ -342,7 +344,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://topjogosvip.online/?p=4220" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4620" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -360,19 +362,19 @@
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://topjogosvip.online/?p=4236" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4588" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://topjogosvip.online/?p=2906" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4548" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://topjogosvip.online/?p=4228" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4536" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
@@ -384,7 +386,7 @@
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
           <h3>Evon Executor</h3>
           <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
-          <a href="https://topjogosvip.online/?p=4224" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4544" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
@@ -396,7 +398,7 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://topjogosvip.online/?p=2894" class="download-button">Download</a>
+          <a href="https://topjogosvip.online/?p=4540" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
@@ -453,6 +455,20 @@
           <h3>Script Gum Infinity</h3>
           <p>Script com auto farm, coletor automático de frutas e recursos extras para Gum Infinity.</p>
           <a href="https://pastebin.com/XMkXLEXY" class="download-button">Download</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="capcut" class="section">
+      <header>
+        <h1>CAPCUT</h1>
+      </header>
+      <div class="grid">
+        <div class="card">
+          <img src="https://i.imgur.com/ZKzUlVM.png" alt="CapCut Pro" />
+          <h3>CapCut Pro Mod</h3>
+          <p>Versão premium do CapCut com todos os recursos desbloqueados para edições profissionais.</p>
+          <a href="https://topjogosvip.online/?p=4596" class="download-button">Download</a>
         </div>
       </div>
     </section>
